--- a/front/src/lib/styles/pages/skills.css
+++ b/front/src/lib/styles/pages/skills.css
@@ -1,3 +1,10 @@
+.cv.meat {
+  h1.skill-title {
+    position: relative;
+    height: auto;
+    line-height: 1;
+  }
+}
 .project-article {
   float: left;
   width: 80%;
