feat(front): adds print stylesheet for CV and home (#1029)
Closes: #1029

--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -1,4 +1,5 @@
 @import 'base/reset.css';
+@import 'print.css';
 @import 'base/theme.css';
 @import 'base/transitions.css';
 @import 'base/fonts.css';
