--- a/front/src/lib/styles/print.css
+++ b/front/src/lib/styles/print.css
@@ -28,7 +28,7 @@
     }
   }
   .experience-timeline {
-    margin: 0;
+    margin: 0 !important;
     .experience-summary {
       padding-top: 0.5rem;
     }
@@ -41,6 +41,12 @@
       padding: 1rem 0 0;
       &:before {
         display: none !important;
+      }
+      .experience-timeline-date {
+        position: absolute;
+        top: 0;
+        right: 0;
+        line-height: 1.5;
       }
       h1.item-title {
         padding-bottom: 0.25rem;
@@ -56,6 +62,9 @@
       }
       .item-details {
         padding-bottom: 1rem;
+        .experience-info {
+          padding-top: 0;
+        }
       }
     }
   }
