--- a/front/src/lib/styles/base/typography.css
+++ b/front/src/lib/styles/base/typography.css
@@ -129,7 +129,7 @@
   .post-article {
     .post-heading {
       position: relative;
-      padding: 0.25rem 0;
+      padding: 0.25rem 1.5rem 0 0.25rem;
     }
     .heading-anchor-link {
       display: inline;
@@ -141,10 +141,14 @@
       transition:
         opacity var(--transition-duration-md) ease-in-out,
         color var(--transition-duration-md);
+      box-sizing: content-box;
       border: none;
+      padding-right: 0.5rem;
+      width: 100%;
       height: 100%;
       font-size: 1rem;
       font-family: var(--font-lb);
+      text-align: right;
       &:hover,
       &:focus,
       &:focus-visible,
@@ -191,6 +195,8 @@ h1.page-heading {
     .post-article {
       .heading-anchor-link {
         left: -1rem;
+        padding-right: 1rem;
+        text-align: left;
       }
     }
   }
@@ -250,8 +256,9 @@ h1.page-heading {
     .privacy-main,
     .post-article {
       .heading-anchor-link {
-        left: -2.5rem;
+        left: -1.5rem;
         vertical-align: middle;
+        padding-right: 1.5rem;
         font-size: inherit;
       }
     }
