--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -5,8 +5,7 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
-  padding-right: 0.25rem;
-  padding-left: 0.25rem;
+  padding: 0 0.25rem;
   width: 100%;
   max-width: 64rem;
 }
