--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -75,16 +75,6 @@
 }
 
 .experience-timeline {
-  time {
-    text-rendering: auto;
-    -webkit-font-smoothing: auto;
-    -moz-osx-font-smoothing: auto;
-    -webkit-text-size-adjust: 100%;
-    will-change: transform;
-  }
-}
-
-.experience-timeline {
   position: relative;
   margin: 0 0 0 7%;
   @media screen and (min-width: 640px) {
@@ -94,10 +84,18 @@
     margin: 0 10% 0 15%;
     max-width: 80%;
   }
+  time {
+    text-rendering: auto;
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+    -webkit-text-size-adjust: 100%;
+    will-change: transform;
+  }
 }
 
 .experience-timeline-item {
   display: flex;
+  position: relative;
   flex-direction: column;
   margin: 0;
   border-left: 2px solid var(--highlight-clr);
@@ -118,6 +116,104 @@
         transparent
       )
       1;
+  }
+  &:not(:hover):not(.current) {
+    opacity: 0.8;
+    .skill {
+      opacity: 0.5;
+    }
+    .item-title::after {
+      width: 90%;
+    }
+  }
+  &.current {
+    .item-title::after {
+      width: 110%;
+    }
+  }
+  &:before {
+    position: absolute;
+    right: 100%;
+    padding-left: calc(100vw * 0.15);
+    height: 100%;
+    content: '';
+  }
+  &:hover,
+  &:focus,
+  &:focus-visible,
+  &:focus-within,
+  &:active {
+    &:before {
+      border-right: 2px solid;
+      border-image: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 1) 28%,
+        rgba(199, 121, 4, 0) 83%
+      );
+    }
+  }
+  &:hover,
+  &:focus,
+  &:focus-visible,
+  &:focus-within,
+  &:active,
+  &:before:hover,
+  &:before:focus,
+  &:before:focus-visible,
+  &:before:focus-within,
+  &:before:active {
+    opacity: 1;
+    color: var(--fg-clr-o);
+    .item-title {
+      color: var(--primary-clr);
+      &::after {
+        transition-timing-function: ease-in;
+        width: 110%;
+      }
+    }
+    header.item-basics {
+      &:before,
+      &:after {
+        transform: scale(1.33) translateX(-1.33%);
+        @media screen and (min-width: 640px) {
+          transform: scale(1.33) translateX(-1.33%);
+        }
+      }
+      &:after {
+        opacity: 0.9;
+        background-color: var(--primary-clr);
+      }
+      .arrow {
+        right: 0;
+        opacity: 1;
+        transition-delay: 0;
+        /* transition-duration: var(--transition-duration); */
+      }
+    }
+    .experience-summary {
+      transition-duration: var(--transition-duration-md);
+      transition-property: color;
+      transition-timing-function: var(--transition-timing-function);
+    }
+    .skills {
+      &:hover {
+        li.skill,
+        .skill {
+          /* display: inline-block; */
+          /* filter: brightness(0.75); */
+          transition-delay: 333ms;
+          transition-duration: var(--transition-duration-md);
+          &:hover,
+          &:focus,
+          &:focus-visible {
+            opacity: 1;
+            filter: brightness(1.25);
+            transition-delay: 0s;
+            transition-duration: 200ms;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -173,7 +269,7 @@
       font-size: 2rem;
     }
     &::after {
-      transition-duration: 1s;
+      transition-duration: var(--transition-duration);
       transition-property: width;
       transition-timing-function: ease-out;
       border-bottom-width: 1px;
@@ -281,100 +377,6 @@
   }
 }
 
-body.ready .main section .experience-timeline-item {
-  position: relative;
-  &:not(:hover):not(.current) {
-    opacity: 0.8;
-    .skill {
-      opacity: 0.5;
-    }
-  }
-  &:before {
-    position: absolute;
-    right: 100%;
-    padding-left: calc(100vw * 0.15);
-    height: 100%;
-    content: '';
-  }
-  &:hover,
-  &:focus,
-  &:focus-visible,
-  &:focus-within,
-  &:active {
-    &:before {
-      border-right: 2px solid;
-      border-image: radial-gradient(
-        circle,
-        rgba(255, 255, 255, 1) 28%,
-        rgba(199, 121, 4, 0) 83%
-      );
-    }
-  }
-  &:hover,
-  &:focus,
-  &:focus-visible,
-  &:focus-within,
-  &:active,
-  &:before:hover,
-  &:before:focus,
-  &:before:focus-visible,
-  &:before:focus-within,
-  &:before:active {
-    opacity: 1;
-    color: var(--fg-clr-o);
-    .item-title {
-      color: var(--primary-clr);
-      &::after {
-        transition-timing-function: ease-in;
-        width: 110%;
-      }
-    }
-    header.item-basics {
-      &:before,
-      &:after {
-        transform: scale(1.33) translateX(-1.33%);
-        @media screen and (min-width: 640px) {
-          transform: scale(1.33) translateX(-1.33%);
-        }
-      }
-      &:after {
-        opacity: 0.9;
-        background-color: var(--primary-clr);
-      }
-      .arrow {
-        right: 0;
-        opacity: 1;
-        transition-delay: 0;
-        /* transition-duration: var(--transition-duration); */
-      }
-    }
-    .experience-summary {
-      transition-duration: var(--transition-duration-md);
-      transition-property: color;
-      transition-timing-function: var(--transition-timing-function);
-    }
-    .skills {
-      &:hover {
-        li.skill,
-        .skill {
-          /* display: inline-block; */
-          /* filter: brightness(0.75); */
-          transition-delay: 333ms;
-          transition-duration: var(--transition-duration-md);
-          &:hover,
-          &:focus,
-          &:focus-visible {
-            opacity: 1;
-            filter: brightness(1.25);
-            transition-delay: 0s;
-            transition-duration: 200ms;
-          }
-        }
-      }
-    }
-  }
-}
-
 .experience-info {
   padding-top: 0.5rem;
   @media screen and (min-width: 640px) {
@@ -456,9 +458,16 @@ body.ready .main section .experience-timeline-item {
 
 .item-details {
   .experience-summary {
-    padding: 1.5rem 0 0 0;
+    padding: 0;
     @media screen and (min-width: 640px) {
-      padding: 1.5rem 0.5rem 0 0.5rem;
+      padding-top: 0 0.5rem 0 0.5rem;
+    }
+    p:first-of-type {
+      padding: 0;
+      padding-top: 1.5rem;
+      @media screen and (min-width: 640px) {
+        padding-top: 1.5rem;
+      }
     }
   }
 }
